Changes before commit

--- a/HTML5Application/public_html/design.css
+++ b/HTML5Application/public_html/design.css
@@ -10,13 +10,36 @@ and open the template in the editor.
 
 body {margin:25px;font:12px Verdana, Arial, Helvetica}
 * {padding:0; margin:0}
-.dropdown {float:right; padding-right:2px}
-.dropdown dt {width:188px; border:1px solid #9ac1c9; padding:8px; font-weight:bold; cursor:pointer; background:#d9e1e4}
-.dropdown dt:hover {background:#eaf0f2}
-.dropdown dd {position:absolute; overflow:hidden; width:200px; display:none; background:#fff; z-index:200; opacity:0}
-.dropdown ul {width:204px; border:1px solid #9ac1c9; list-style:none; border-top:none;}
-.dropdown li {display:inline}
-.dropdown a, .dropdown a:active, .dropdown a:visited {display:block; padding:5px; color:#333; text-decoration:none; background:#eaf0f2; width:194px}
-.dropdown a:hover {background:#d9e1e4; color:#000}
-.dropdown .separator {border-bottom:1px solid #b9d6dc}
+.dropdown_elements {float:right; padding-right:2px}
+.dropdown_elements dt {width:188px; border:1px solid #9ac1c9; padding:8px; font-weight:bold; cursor:pointer; background:#d9e1e4}
+.dropdown_elements dt:hover {background:#eaf0f2}
+.dropdown_elements dd {position:absolute; overflow:hidden; width:200px; display:none; background:#fff; z-index:200; opacity:0}
+.dropdown_elements ul {width:204px; border:1px solid #9ac1c9; list-style:none; border-top:none;}
+.dropdown_elements li {display:inline;cursor:pointer;cursor:hand}
+.dropdown_elements a, .dropdown_elements a:active, .dropdown_elements a:visited {display:block; padding:5px; color:#333; text-decoration:none; background:#eaf0f2; width:194px}
+.dropdown_elements a:hover {background:#d9e1e4; color:#000}
+.dropdown_elements .separator {border-bottom:1px solid #b9d6dc}
+
+.colour_wire {float:right; padding-right:2px}
+.colour_wire dt {width:188px; border:1px solid #9ac1c9; padding:8px; font-weight:bold; cursor:pointer; background:#d9e1e4}
+.colour_wire dt:hover {background:#eaf0f2}
+.colour_wire dd {position:absolute; overflow:hidden; width:200px; display:none; background:#fff; z-index:200; opacity:0}
+.colour_wire ul {width:204px; border:1px solid #9ac1c9; list-style:none; border-top:none;}
+.colour_wire li {display:inline;cursor:pointer}
+.colour_wire a, .colour_wire a:active, .colour_wire a:visited {display:block; padding:5px; color:#333; text-decoration:none; background:#eaf0f2; width:194px}
+.colour_wire a:hover {background:#d9e1e4; color:#000}
+.colour_wire .separator {border-bottom:1px solid #b9d6dc}
+
+
+/*
+.wire {float:right; padding-right:2px}
+.wire dt {width:188px; border:1px solid #9ac1c9; padding:8px; font-weight:bold; cursor:pointer; background:#d9e1e4}
+.wire dt:hover {background:#eaf0f2}
+.wire dd {position:absolute; overflow:hidden; width:200px; display:none; background:#fff; z-index:200; opacity:0}
+.wire ul {width:204px; border:1px solid #9ac1c9; list-style:none; border-top:none;}
+.wire li {display:inline;cursor:pointer}
+.wire a, .wire a:active, .wire a:visited {display:block; padding:5px; color:#333; text-decoration:none; background:#eaf0f2; width:194px}
+.wire a:hover {background:#d9e1e4; color:#000}
+.wire .separator {border-bottom:1px solid #b9d6dc}
+*/
 
